salesforce_sfdx/main/default/objects/Stakeholder__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Permite relacionar o no a una cuenta existente, puede ser vacío</description>
    <inlineHelpText>Si el Stakeholder existe como cuenta puede vincularlo. También puede quedar vacío.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stakeholders</relationshipLabel>
    <relationshipName>Stakeholders</relationshipName>
    <type>Lookup</type>
</CustomField>