salesforce_sfdx/main/default/objects/Stakeholder__c/fields/Comuna__c.field-meta.xml
<CustomField>
    <fullName>Comuna__c</fullName>
    <description>Comuna a la que pertenece el Stakeholder</description>
    <inlineHelpText>Ingrese la comuna del Stakeholder</inlineHelpText>
    <label>Comuna</label>
    <length>50</length>
    <type>Text</type>
</CustomField>