salesforce_sfdx/main/default/objects/Stakeholder__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <description>Dirección del Stakeholder</description>
    <inlineHelpText>Ingrese la dirección y número del Stakeholder</inlineHelpText>
    <label>Dirección</label>
    <type>TextArea</type>
</CustomField>