salesforce_sfdx/main/default/objects/Stakeholder__c/fields/Manager_One_Engie__c.field-meta.xml
<CustomField>
    <fullName>Manager_One_Engie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager One Engie</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Stakeholders</relationshipName>
    <type>Lookup</type>
</CustomField>