salesforce_sfdx/main/default/objects/Stakeholder__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <description>País al que pertenece el Stakeholder</description>
    <inlineHelpText>Ingrese el país al que pertenece el Stakeholder</inlineHelpText>
    <label>País</label>
    <length>30</length>
    <type>Text</type>
</CustomField>