salesforce_sfdx/main/default/objects/Stakeholder__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ministerio</fullName>
            </value>
            <value>
                <fullName>Autoridad Regional</fullName>
            </value>
            <value>
                <fullName>Gremio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>